--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.3.1",
     "next": "^9.1.1",
     "next-images": "^1.2.0",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.10.2",
+    "react-dropdown": "^1.6.4"
   }
 }
